tests/paczka1/fuzzy1/43208252.err
Error in line 3: z59 S760 56,1
Error in line 4: IBW A79 45,1
Error in line 23: L254Fi S760 70,52
Error in line 19: z59 S760 43,1
Error in line 12: qcRGkB S961 27,9
Error in line 28: 3zJ2EhT3nXa A79 70,8
Error in line 29: qcRGkB A79 33,9
